force-app/main/default/objects/Activity/fields/AI_Key_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>AI_Key_Outcomes__c</fullName>
    <label>AI Key Outcomes</label>
    <type>TextArea</type>
</CustomField>