force-app/main/default/objects/Activity/fields/AI_Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Meeting_Summary__c</fullName>
    <label>AI Meeting Summary</label>
    <type>TextArea</type>
</CustomField>