force-app/main/default/objects/Activity/fields/AI_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>AI_Next_Steps__c</fullName>
    <label>AI Next Steps</label>
    <type>TextArea</type>
</CustomField>